tests/purs/passing/TypeWithoutParens/Lib.purs
module Lib (X, Y) where

data X = X
type Y = X
