tests/purs/failing/ExportConflictClassAndType/B.purs
module B where

data X
